--- a/GoToShopping/Views/Base.lproj/Main.storyboard
+++ b/GoToShopping/Views/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="XTD-D0-bwr">
-                                <rect key="frame" x="0.0" y="68" width="375" height="220"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="220"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="XTD-D0-bwr" secondAttribute="height" multiplier="75:44" id="ab8-1g-FHP"/>
                                 </constraints>
@@ -136,7 +136,6 @@
                                             <outlet property="activityImage" destination="pKX-jj-LHG" id="wJi-x3-kTU"/>
                                             <outlet property="nameActivitiyLabel" destination="w2c-NR-XBK" id="xmt-D0-TVO"/>
                                             <outlet property="openingHoursActivityLabel" destination="P1Z-no-a4U" id="PGr-V3-YyI"/>
-                                            <segue destination="aYT-MN-XXL" kind="show" identifier="activityShowDetail" id="DMd-jV-ZE1"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -160,6 +159,7 @@
                     <connections>
                         <outlet property="activitiesCollection" destination="gqC-RC-ERu" id="DSt-NK-Q0g"/>
                         <outlet property="activitiesMap" destination="XTD-D0-bwr" id="Qyz-QJ-3Kc"/>
+                        <segue destination="aYT-MN-XXL" kind="show" identifier="activityShowDetail" id="rBg-XF-rVF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mK-kF-PPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -175,25 +175,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="FY7-wR-GZF">
-                                <rect key="frame" x="4" y="259" width="367" height="404"/>
+                                <rect key="frame" x="4" y="255.5" width="367" height="407.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="iTl-Rc-Dv4">
-                                        <rect key="frame" x="0.0" y="0.0" width="367" height="199.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="S8d-ko-IPW">
+                                        <rect key="frame" x="0.0" y="0.0" width="367" height="201.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Dy1-pb-Zp7">
-                                        <rect key="frame" x="0.0" y="204.5" width="367" height="199.5"/>
+                                        <rect key="frame" x="0.0" y="206.5" width="367" height="201"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nSO-8P-yqN">
-                                                <rect key="frame" x="0.0" y="0.0" width="367" height="100"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="367" height="100.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sae-Hy-AXN">
-                                                <rect key="frame" x="0.0" y="100" width="367" height="99.5"/>
+                                                <rect key="frame" x="0.0" y="100.5" width="367" height="100.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -203,7 +204,7 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BxL-Of-jWz">
-                                <rect key="frame" x="4" y="72" width="367" height="172"/>
+                                <rect key="frame" x="4" y="68" width="367" height="172"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BxL-Of-jWz" secondAttribute="height" multiplier="367:172" id="LHt-Wf-MEI"/>
                                 </constraints>
@@ -226,7 +227,7 @@
                     </view>
                     <connections>
                         <outlet property="addressDetailLabel" destination="sae-Hy-AXN" id="vnK-Rl-OTi"/>
-                        <outlet property="detailDescriptionLabel" destination="iTl-Rc-Dv4" id="X1V-34-SUj"/>
+                        <outlet property="detailDescriptionTextField" destination="S8d-ko-IPW" id="CUG-YY-CcN"/>
                         <outlet property="mapDetailImage" destination="BxL-Of-jWz" id="FhX-oV-5id"/>
                         <outlet property="openingDetailLabel" destination="nSO-8P-yqN" id="qcN-hL-JcT"/>
                     </connections>
@@ -310,7 +311,6 @@
                                                     <outlet property="nameShopLabel" destination="2N4-v8-gSX" id="H8v-a8-29Y"/>
                                                     <outlet property="openingHoursLabel" destination="nwW-Sh-Kyi" id="iHq-1H-AAf"/>
                                                     <outlet property="shopImage" destination="KUY-Ld-G5b" id="pJI-XX-ffb"/>
-                                                    <segue destination="tiA-iH-0cj" kind="show" identifier="shopShowDetail" id="t9f-5S-JdF"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
@@ -345,6 +345,7 @@
                     <connections>
                         <outlet property="shopCollectionView" destination="pBF-9y-YtO" id="pPS-O7-nQ5"/>
                         <outlet property="shopMapView" destination="bQ7-oo-Iwe" id="D2r-Hb-C5r"/>
+                        <segue destination="tiA-iH-0cj" kind="show" identifier="shopShowDetail" id="zxy-o5-V4Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -424,7 +425,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RBe-Uz-Ugh" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KqR-T7-ODX">
-                        <rect key="frame" x="0.0" y="20" width="375" height="48"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
